--- a/src/app/contact/contacts/contacts.component.html
+++ b/src/app/contact/contacts/contacts.component.html
@@ -15,7 +15,7 @@
 
         <ng-container matColumnDef="phone">
             <th mat-header-cell *matHeaderCellDef> Telefone </th>
-            <td mat-cell *matCellDef="let contact"> {{contact.phone}} </td>
+            <td mat-cell *matCellDef="let contact"> <a href="https://api.whatsapp.com/send?phone={{contact.phone}}">{{contact.phone}}</a> </td>
         </ng-container>
 
         <ng-container matColumnDef="company">
